--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
   "name": "parcel-project-template",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "description": "",
-  "homepage": "https://HennadiiBorysevych.github.io/TypeScriptPractice",
+  "main": "app.js",
   "scripts": {
-    "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /TypeScriptPractice/"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "lite-server"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/HennadiiBorysevych/TypeScriptPractice.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/HennadiiBorysevych/TypeScriptPractice/issues"
   },
-  "dependencies": {
-    "modern-normalize": "^1.1.0"
-  },
+  "homepage": "https://github.com/HennadiiBorysevych/TypeScriptPractice#readme",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.6.0",
-    "parcel": "^2.6.0",
-    "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
-  },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+    "lite-server": "^2.6.1"
+  }
 }
